# automated_metashape

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  build-command.txt  config.txt  setup.cfg
automated_metashape/: ImageMarkers.py  MetashapeProcessing.py  __init__.py
config/: background_removal_config.yml  close-range_photogrammetry.yml  config_with_networking-Copy1.yml  config_with_networking.yml  identify_markers_config.yml
jupyter/: Untitled.ipynb  automated_photogrammetry.ipynb  close-range_photogrammetry.ipynb
metashape_workflow/: ChangeLog  LICENSE  readme.md  requirements.txt  setup.cfg  setup.py
metashape_workflow/automated_metashape/: ImageMarkers.py  MetashapeProcessing.py  __init__.py  read_yaml.py
python/: background_removal.py  identify_markers.py  metashape_metadata_extractuin.py  metashape_workflow_class.py  read_yaml.py
