[metadata]
name = automated metashape
author = Peter Betlem
author-email = Peter.Betlem@unis.no
summary = Automated processing python class for Agisoft Metashape
description-file =
    README.md
home-page = https://github.com/PeterBetlem/image_processing
project_urls =
    Bug Tracker = https://github.com/PeterBetlem/image_processing/issues
    Documentation = https://unisvalbard.github.io/Geo-SfM/content/lessons/l4/python.html
    Source Code = https://github.com/PeterBetlem/image_processing
license = BSD 3-Clause
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Education
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education
keywords = 
    photogrammetry
    metashape
requires-python = >=3.7

[files]
packages =
    automated_metashape